syntax = "proto3";

import "google/api/annotations.proto";
//import "google/protobuf/timestamp.proto";
//import "google/protobuf/duration.proto";
import "GenericMessages.proto";
import "TimeInterval.proto";
import "DayRate.proto";
import "WeekPayModel.proto";


package MiddlewareProtos;

service RequestHandler {
  rpc NotifyClusterCoordinator (NotifyClusterCoordinatorRequest) returns (GenericMessages.SyncResult)
  {
	  option (google.api.http) = {
      post: "/HttpAPI/MiddlewareProtos/RequestHandler/NotifyClusterCoordinator"
      body: "*"
    };
  }
  rpc NotifyProcessedRequest (NotifyProcessedRequestMessage) returns (GenericMessages.SyncResult)
  {
	  option (google.api.http) = {
      post: "/HttpAPI/MiddlewareProtos/RequestHandler/NotifyProcessedResponse"
      body: "*"
    };
  }
  rpc CalculateFee (CalculateFeeRequest) returns (CalculateFeeResponse)
  {
	  option (google.api.http) = {
      post: "/HttpAPI/MiddlewareProtos/RequestHandler/CalculateFee"
      body: "*"
    };
  }

  //WeekPayModel
  rpc UpsertWeekPayModel (UpsertWeekPayModelRequest) returns (GenericMessages.AsyncResult)
  {
	  option (google.api.http) = {
      post: "/HttpAPI/MiddlewareProtos/RequestHandler/UpsertWeekPayModel"
      body: "*"
    };
  }
  rpc GetWeekPayModel (GetWeekPayModelRequest) returns (GenericMessages.AsyncResult)
  {
	  option (google.api.http) = {
      post: "/HttpAPI/MiddlewareProtos/RequestHandler/GetWeekPayModel"
      body: "*"
    };
  }
  rpc GetWeekPayModels (GetWeekPayModelsRequest) returns (GenericMessages.AsyncResult)
  {
	  option (google.api.http) = {
      post: "/HttpAPI/MiddlewareProtos/RequestHandler/GetWeekPayModels"
      body: "*"
    };
  }
  rpc DeleteWeekPayModel (DeleteWeekPayModelRequest) returns (GenericMessages.AsyncResult)
  {
	  option (google.api.http) = {
      post: "/HttpAPI/MiddlewareProtos/RequestHandler/DeleteWeekPayModel"
      body: "*"
    };
  }

  //DayRate
  rpc UpsertDayRate (UpsertDayRateRequest) returns (GenericMessages.AsyncResult)
  {
	  option (google.api.http) = {
      post: "/HttpAPI/MiddlewareProtos/RequestHandler/UpsertDayRate"
      body: "*"
    };
  }
  rpc GetDayRate (GetDayRateRequest) returns (GenericMessages.AsyncResult)
  {
	  option (google.api.http) = {
      post: "/HttpAPI/MiddlewareProtos/RequestHandler/GetDayRate"
      body: "*"
    };
  }
  rpc GetDayRates (GetDayRatesRequest) returns (GenericMessages.AsyncResult)
  {
	  option (google.api.http) = {
      post: "/HttpAPI/MiddlewareProtos/RequestHandler/GetDayRates"
      body: "*"
    };
  }
  rpc DeleteDayRate (DeleteDayRateRequest) returns (GenericMessages.AsyncResult)
  {
	  option (google.api.http) = {
      post: "/HttpAPI/MiddlewareProtos/RequestHandler/DeleteDayRate"
      body: "*"
    };
  }

  //TimeInterval
  rpc UpsertTimeInterval (UpsertTimeIntervalRequest) returns (GenericMessages.AsyncResult)
  {
	  option (google.api.http) = {
      post: "/HttpAPI/MiddlewareProtos/RequestHandler/UpsertTimeInterval"
      body: "*"
    };
  }
  rpc GetTimeInterval (GetTimeIntervalRequest) returns (GenericMessages.AsyncResult)
  {
	  option (google.api.http) = {
      post: "/HttpAPI/MiddlewareProtos/RequestHandler/GetTimeInterval"
      body: "*"
    };
  }
  rpc GetTimeIntervals (GetTimeIntervalsRequest) returns (GenericMessages.AsyncResult)
  {
	  option (google.api.http) = {
      post: "/HttpAPI/MiddlewareProtos/RequestHandler/GetTimeIntervals"
      body: "*"
    };
  }
  rpc DeleteTimeInterval (DeleteTimeIntervalRequest) returns (GenericMessages.AsyncResult)
  {
	  option (google.api.http) = {
      post: "/HttpAPI/MiddlewareProtos/RequestHandler/DeleteTimeInterval"
      body: "*"
    };
  }
}

//STR Requests
message NotifyClusterCoordinatorRequest {
    string CoordinatorEndpoint = 1;
    string ClusterType = 2;
}

message NotifyProcessedRequestMessage {
    string RequestId = 1;
    string ResponseType = 2;
    string ResponseJson = 3;
}

message CalculateFeeRequest {
    string RequestId = 1;
    string SenderEndpoint = 2;
    double StartDateTime = 3; //OA time
    double EndDateTime = 4; //OA time
}

//STR WeekPayModel CRUD
message UpsertWeekPayModelRequest {
  string RequestId = 1; //essential to remap responses to relative client request
  string SenderEndpoint = 2;
  MicroservicesProtos.WeekPayModelType WeekPayModel = 3;
}

message GetWeekPayModelRequest {
  string RequestId = 1;
  string SenderEndpoint = 2;
  int32 Id = 3;
}

message GetWeekPayModelsRequest {
  string RequestId = 1;
  string SenderEndpoint = 2;
}

message DeleteWeekPayModelRequest {
  string RequestId = 1;
  string SenderEndpoint = 2;
  int32 Id = 3;
}
//END WeekPayModel CRUD

//STR DayRate CRUD
message UpsertDayRateRequest {
  string RequestId = 1; //essential to remap responses to relative client request
  string SenderEndpoint = 2;
  MicroservicesProtos.DayRateType DayRate = 3;
}

message GetDayRateRequest {
  string RequestId = 1;
  string SenderEndpoint = 2;
  int32 Id = 3;
}

message GetDayRatesRequest {
  string RequestId = 1;
  string SenderEndpoint = 2;
}

message DeleteDayRateRequest {
  string RequestId = 1;
  string SenderEndpoint = 2;
  int32 Id = 3;
}
//END DayRate CRUD

//STR TimeInterval CRUD
message UpsertTimeIntervalRequest {
  string RequestId = 1; //essential to remap responses to relative client request
  string SenderEndpoint = 2;
  MicroservicesProtos.TimeIntervalType TimeInterval = 3;
}

message GetTimeIntervalRequest {
  string RequestId = 1;
  string SenderEndpoint = 2;
  int32 Id = 3;
}

message GetTimeIntervalsRequest {
  string RequestId = 1;
  string SenderEndpoint = 2;
}

message DeleteTimeIntervalRequest {
  string RequestId = 1;
  string SenderEndpoint = 2;
  int32 Id = 3;
}
//END TimeInterval CRUD

//End Requests


//STR Responses
message CalculateFeeResponse {
    double Fee = 1;
    string RequestId = 2;
}

//END Responses
