syntax = "proto3";

import "GenericMessages.proto";
package MiddlewareProtos;

service RequestHandlerMiddleware {
	rpc Test (GenericMessages.AsyncResult) returns (GenericMessages.AsyncResult)
  {
	  option (google.api.http) = {
      post: "/HttpAPI/MiddlewareProtos/RequestHandlerMiddleware/Test"
      body: "*"
    };
  }
}
